README.md intro, share/*.html meta

--- a/share/2048.html
+++ b/share/2048.html
@@ -3,9 +3,15 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>
-        2048
-    </title>
+    <title>2048</title>
+    
+    <meta name="description" content="The classic 2048. Play on laptop & phone!" />
+    <meta property="og:title" content="2048">
+    <meta property="og:description" content="The classic 2048. Play on laptop & phone!">
+    <meta property="og:url" content="https://kirksud.github.io/share/2048.html">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:site_name" content="kirksud.github.io">
+
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> -->
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
