--- a/share/knapsack.html
+++ b/share/knapsack.html
@@ -5,6 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         
         <title>Knapsack Visualization</title>
+        <meta name="description" content="Knapsack 0-1 algorithm visualization. Options: recursion & exact." />
+        <meta property="og:title" content="Knapsack Visualization">
+        <meta property="og:description" content="Knapsack 0-1 algorithm visualization. Options: recursion & exact.">
+        <meta property="og:url" content="https://kirksud.github.io/share/knapsack.html">
+        <meta name="twitter:card" content="summary_large_image">
+        <meta property="og:site_name" content="kirksud.github.io">
 
         <style>
             main {
