--- a/share/todo.html
+++ b/share/todo.html
@@ -3,15 +3,21 @@
 
 <head>
   <meta charset="UTF-8" />
+  <title>Memo</title>
+
   <meta name="description" content="Responsive memo app with folder, backup and more features." />
+  <meta property="og:title" content="Memo app">
+  <meta property="og:description" content="Responsive memo app with folder, backup and more features.">
+  <meta property="og:url" content="https://kirksud.github.io/share/memo.html">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="og:site_name" content="kirksud.github.io">
+
   <!-- RWD & bootstrap: https://getbootstrap.com/docs/4.4/getting-started/introduction/ -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-  <title>Memo</title>
 
   <style>
 main {
