--- a/share/dtts.html
+++ b/share/dtts.html
@@ -8,12 +8,14 @@
 
     <meta property="og:title" content="Don't touch the spikes">
     <meta property="og:description" content="A fun game with a squirrel & pine cone. Play on laptop & phone!">
-    <meta property="og:image" content="https://kirksud.github.io/share/img/squirrel.png">
+    <meta property="og:image" content="https://kirksud.github.io/share/dtts_static/squirrel.png">
     <meta property="og:url" content="https://kirksud.github.io/share/dtts.html">
     <meta name="twitter:card" content="summary_large_image">
 
     <meta property="og:site_name" content="kirksud.github.io">
     <meta name="twitter:image:alt" content="Cute squirrel">
+
+    <link rel="icon" href="dtts_static/squirrel.png">
 
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> -->
@@ -134,7 +136,7 @@
         }
         #pine-div::before {
             content: "";
-            background-image: url(img/pine.png);
+            background-image: url(dtts_static/pine.png);
             background-position: center;
             background-size: contain;
             width: calc(var(--unit) * 0.8);
@@ -157,12 +159,12 @@
             height: calc(var(--unit) * 6 / 5);
             left: calc(var(--unit) * 107 / 30);
             top: calc(var(--unit) * 653 / 120);
-            background-image: url(img/squirrel.png);
+            background-image: url(dtts_static/squirrel.png);
             background-position: center;
             background-size: contain;
         }
         .char-fly {
-            background-image: url(img/squirrel_fly.png);
+            background-image: url(dtts_static/squirrel_fly.png);
         }
         .char-right {
             transform: scaleX(-1);
@@ -174,19 +176,19 @@
         @keyframes char-fly-anim {
             0% {
                 transform: translateY(0) scaleX(-1);
-                background-image: url(img/squirrel_fly.png);
+                background-image: url(dtts_static/squirrel_fly.png);
             }
             25% {
                 transform: translateY(-55%) scaleX(-1);
-                background-image: url(img/squirrel.png);
+                background-image: url(dtts_static/squirrel.png);
             }
             75% {
                 transform: translateY(55%) scaleX(-1);
-                background-image: url(img/squirrel_fly.png);
+                background-image: url(dtts_static/squirrel_fly.png);
             }
             100% {
                 transform: translateY(0) scaleX(-1);
-                background-image: url(img/squirrel_fly.png);
+                background-image: url(dtts_static/squirrel_fly.png);
             }
         }
 
@@ -194,7 +196,7 @@
             position: absolute;
             width: var(--unit);
             height: var(--unit);
-            background-image: url(img/circle.png);
+            background-image: url(dtts_static/circle.png);
             background-position: center;
             background-size: contain;
             opacity: 0;
@@ -217,7 +219,7 @@
             position: absolute;
             height: calc(var(--unit) * 0.8);
             width: calc(var(--unit) * 0.8);
-            background-image: url(img/pine.png);
+            background-image: url(dtts_static/pine.png);
             background-position: center;
             background-size: contain;
             transition: transform 500ms, opacity 500ms;
@@ -235,7 +237,7 @@
             width: var(--unit);
             filter: invert(57%) sepia(0%) saturate(0%) hue-rotate(226deg) brightness(89%) contrast(84%);
             /* #808080 https://codepen.io/sosuke/pen/Pjoqqp loss: 0 prefect result */
-            background-image: url(img/spike.png);
+            background-image: url(dtts_static/spike.png);
             background-position: center;
             background-size: contain;
         }
@@ -319,8 +321,10 @@
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.2.0/dist/tf.min.js" integrity="sha256-J9iK/e7dz7abCBHQvsXk9N47NKMDpSb+d/pnOpF3DsA=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script>
+        let autoPlay, autoPlayN;
         $(function(){
             for (let i=0; i<8; ++i) {
                 $("#scene-div").append(
@@ -393,15 +397,15 @@
                 ["#84003e", "#ec0064", "invert(10%) sepia(100%) saturate(5426%) hue-rotate(327deg) brightness(104%) contrast(104%)"],
                 ["#ffab34", "#ffffff", "invert(1)"],
                 ["#00a2ff", "#ffffff", "invert(1)"],
-                ["a734ff", "ffffff", "invert(1)"],
-                ["83e015", "ffffff", "invert(1)"],
-                ["000000", "ffffff", "invert(1)"],
-                ["ea9ccc", "000000", "none"],
-                ["9cc1ea", "000000", "none"],
-                ["bbea9c", "000000", "none"],
-                ["a99cea", "000000", "none"],
-                ["9ceada", "000000", "none"],
-                ["000000", "ff0000", "invert(12%) sepia(90%) saturate(7310%) hue-rotate(3deg) brightness(104%) contrast(113%)"]];
+                ["#a734ff", "#ffffff", "invert(1)"],
+                ["#83e015", "#ffffff", "invert(1)"],
+                ["#000000", "#ffffff", "invert(1)"],
+                ["#ea9ccc", "#000000", "none"],
+                ["#9cc1ea", "#000000", "none"],
+                ["#bbea9c", "#000000", "none"],
+                ["#a99cea", "#000000", "none"],
+                ["#9ceada", "#000000", "none"],
+                ["#000000", "#ff0000", "invert(12%) sepia(90%) saturate(7310%) hue-rotate(3deg) brightness(104%) contrast(113%)"]];
 
             setCharPos(10, 14.5);
             $(document).on("keydown", function(evt) {
@@ -597,7 +601,7 @@
                     score++;
                     $("#score-div").text(score);
                     addSpike();
-                    if (score % addSpikePer === 0 && spikeCount < 11) {
+                    if (score % addSpikePer === 0 && spikeCount < 9) {
                         spikeCount++;
                     }
                     if (score % changeColorPer === 0 && colorIdx < bgcolor.length-1) {
@@ -619,7 +623,7 @@
                     score++;
                     $("#score-div").text(score);
                     addSpike();
-                    if (score % addSpikePer === 0 && spikeCount < 11) {
+                    if (score % addSpikePer === 0 && spikeCount < 9) {
                         spikeCount++;
                     }
                     if (score % changeColorPer === 0 && colorIdx < bgcolor.length-1) {
@@ -653,6 +657,72 @@
                 }
                 requestAnimationFrame(updateScreen);
             }
+
+            let tfModel, autoPlaying=false;
+            async function loadTfModel() {
+                tfModel = await tf.loadLayersModel("dtts_static/model.json");
+            }
+            loadTfModel();
+            function sleep(ms) {
+                return new Promise(resolve => setTimeout(resolve, ms));
+            }
+            autoPlay = async function() {
+                if (autoPlaying) {
+                    autoPlaying = false;
+                    return;
+                }
+                autoPlaying = true;
+                if (!playing && !flying) {
+                    backToMenu();
+                }
+                press();
+                function scale(value, min_value, max_value) {
+                    return (value - min_value) / (max_value - min_value) * 2 - 1;
+                }
+                while (playing && autoPlaying) {
+                    // await sleep(27);
+                    await sleep(0);
+                    // scale to +-1
+                    const gameStatus = [
+                        scale(charX, charLeftBound, charRightBound),
+                        scale(charY, charTopBound, charBottomBound),
+                        charDir,
+                        scale(velocityY, flyVelocity, gravity),
+                        scale(pinePos ?? 0, 0, 10),
+                        pineDir ?? 0
+                    ];
+                    for (let i=0; i<hasSpike.length; ++i) {
+                        gameStatus.push(hasSpike[i] ? 1: -1);
+                    }
+
+                    const pred = (await tfModel.predict(tf.tensor([gameStatus])).array())[0];
+                    // if (pred[1] > 0.5) { // supervised classifier
+                    if (pred[1] > pred[0]) { // RL Q-value
+                        press();
+                    }
+                }
+                autoPlaying = false;
+                return score;
+            }
+            autoPlayN = async function(n) {
+                let scoreSum=0;
+                for (let i=0; i<n; ++i) {
+                    if (i > 0) {
+                        await sleep(3000);
+                    }
+                    const newScore = await autoPlay();
+                    scoreSum += newScore;
+                    console.log(`Round ${i+1} Score ${newScore} Avg ${scoreSum/(i+1)}`);
+                }
+                console.log(scoreSum / n);
+                return scoreSum / n;
+            }
+            $("#pine-div").on("pointerdown", function() {
+                if (pineCount >= 10) {
+                    pineCount -= 10;
+                    autoPlay();
+                }
+            });
         });
     </script>
 </body>
