--- a/share/time_record.html
+++ b/share/time_record.html
@@ -24,7 +24,7 @@ body {
     display: flex;
     flex-direction: column;
 }
-p {
+#diff, .record {
     text-align: center;
     margin: 0 16px;
     padding: 16px 0;
@@ -42,6 +42,9 @@ p {
     font-size: large;
 }
     </style>
+
+    <script src="synk.js"></script>
+
 </head>
 <body>
     <p id="diff"></p>
@@ -109,17 +112,34 @@ class TimeRecordApp {
         $("#undo").onclick = evt => this.undo()
         $("#do").onclick = evt => this.do()
         setInterval(() => this.update(), 100)
+
+        const synkServer = "https://kirk.alwaysdata.net"
+        // const synkServer = "https://kirksud.pythonanywhere.com"
+        this.synk = new Synk(synkServer, "4KB", this.localStorageKey + "_synk")
+        const localData = localStorage.getItem(this.localStorageKey) ?? "null"
+        this.synk.run(localData, data => {
+            if (data === null || data === localData)
+                return
+            localStorage.setItem(this.localStorageKey, data)
+            this.load(data)
+        })
     }
-    load() {
-        const data = localStorage.getItem(this.localStorageKey)
-        if (data === null)
-            this.records = []
-        else
-            this.records = JSON.parse(data)
+    load(data=null) {
+        data = data ?? localStorage.getItem(this.localStorageKey)
+        data = data ?? "[]"
+        this.records = JSON.parse(data)
         return this.records
     }
     save() {
         localStorage.setItem(this.localStorageKey, JSON.stringify(this.records))
+
+        const localData = localStorage.getItem(this.localStorageKey) ?? "null"
+        this.synk.run(localData, data => {
+            if (data === null || data === localData)
+                return
+            localStorage.setItem(this.localStorageKey, data)
+            this.load(data)
+        })
     }
     undo(quiet=false) {
         if (this.records.length === 0)
